--- a/documentation/MeetingMinutes/MoM_231023.md
+++ b/documentation/MeetingMinutes/MoM_231023.md
@@ -12,7 +12,7 @@
 * Deepak Jaiswal (T-Mobile)
 * Pradeep Achar Pushpa (Mavenir)
 * Sushanth Hegde (Mavenir)
-* Santiago Troncoso (quobis)
+* Santiago Troncoso (Quobis)
 * Elías Pérez (quobis)
 * Jesus Pedruelo (Vodafone)
 * Maxime Delon (Orange)
