--- a/documentation/MeetingMinutes/MoM_231023.md
+++ b/documentation/MeetingMinutes/MoM_231023.md
@@ -13,7 +13,7 @@
 * Pradeep Achar Pushpa (Mavenir)
 * Sushanth Hegde (Mavenir)
 * Santiago Troncoso (Quobis)
-* Elías Pérez (quobis)
+* Elías Pérez (Quobis)
 * Jesus Pedruelo (Vodafone)
 * Maxime Delon (Orange)
 
