--- a/documentation/MeetingMinutes/MoM_231023.md
+++ b/documentation/MeetingMinutes/MoM_231023.md
@@ -30,9 +30,10 @@
 
 ## Discussion
 
-Deepak: not to focus only on simple use cases and be concerned always that the API needs to be evolved to complex ones.  
-Focus initially on the proposed use case to develop later  
-Notification flows are a point of interest.  
+TMUS/Deepak : not to focus only on simple use cases and be concerned always that the API needs to be evolved to complex ones. 
+TMUS/Deepak : The current version of the API does not support choosing the line to be used for registration. It retrieves the MSISDN based on the deviceid provided by the client. The comment was to update the API to support selecting the line to be registered.
+TMUS/Deepak : Notification channel – current version assumes websocket to be the only notification channel, the comment was to support multiple notification channel i.e. websocket, pns and web hooks. 
+Focus initially on the proposed use case to develop later - the initial version should be extensible to support any future changes.    
 The delivery UNI will initially be done thorugh JSON over websockets.  
 The NBI will be API REST.
 
