--- a/documentation/MeetingMinutes/MoM_240213.md
+++ b/documentation/MeetingMinutes/MoM_240213.md
@@ -7,7 +7,7 @@
 * Ricardo Serrano (Telefónica) 
 * Pedro Jose Gutierrez (Telefónica)
 * Javier Villa (Telefónica) 
-* Rafał Artych (T-Mobile) 
+* Rafał Artych (Deutsche Telekom) 
 * Deepak Jaiswal (T-Mobile USA) 
 * Pradeep Achar Pushpa (Mavenir) 
 * Sushanth Hegde (Mavenir)
